# CNNF

./: README.md  README.txt
CostFilter-Improved/: CostFilter.h  Image.cpp  Image.h  README.txt  demo_stereo.m  main.cpp
CostFilter-Original/: CMakeLists.txt  CostFilter.cpp  CostFilter.h  Image.cpp  README.txt  demo_stereo.m
Extractor/: CMakeLists.txt  Feature.cpp  Feature.h  README.txt  demo.m  main.cpp
PMBP-Improved/: CMakeLists.txt  README.txt  demo_flow.m  demo_stereo.m  run_2dflow.py  run_stereo.py
PMBP-Improved/include/: graph_particles.h  image_operator.h  utils.h
PMBP-Improved/src/: CrossAgg.cpp  graph_2d_flow.cc  graph_particles.cc  image_operator.cc  main.cc
PMBP-Original/: CMakeLists.txt  demo_flow.m  demo_stereo.m  pmbp  run_2dflow.py  run_stereo.py
Tools/: flow2png.m  flowToColor.m  flow_to_color.m  int16 png inf .txt
